Fix icon and title alignment for project settings

--- a/resources/sass/site2.scss
+++ b/resources/sass/site2.scss
@@ -526,6 +526,14 @@ form.vertical, .fields-vertical {
     color: rgba(0, 0, 0, 0.6);
     margin: 25px 0 0;
   }
+
+  div > p, button {
+    display: inline-flex;
+    align-items: center;
+    .material-icons {
+      margin-right: 10px;
+    }
+  }
 }
 
 .project-settings-actions {
